navbar + home letreiro + bugs navbar + new scrollbar +

--- a/front-end/src/styles/global.css
+++ b/front-end/src/styles/global.css
@@ -1,15 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+home {
+    scroll-behavior: smooth;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 
-    background-color: #121212;
+    background-color: rgb(255, 0, 217);
     color: rgb(233, 233, 233);
 
     font-family: 'Inter', sans-serif;
 
     list-style-type: none; 
     text-decoration: none;
+    background-color: transparent !important;
+    scroll-behavior: smooth;
+}
+
+
+
+::-webkit-scrollbar {
+    width: 1.35em;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgb(0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(224, 224, 224);
+    
+    border-radius: 30px;
+    border: .4em solid rgb(0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(255, 255, 255);
 }
