--- a/front-end/src/styles/home.module.css
+++ b/front-end/src/styles/home.module.css
@@ -1,5 +1,43 @@
-.div_q_u_e {
-    height: 200px;
-    width: 300px;
-    background-color: brown;
+.container_q_u_e, .container_por_favor {
+    height: 50%;
+    width: 100%;
+    /* background-color: brown !important; */
+}
+
+.container_q_u_e {
+    padding: 50px 0 0 0;
+}
+
+.container_por_favor {
+    padding: 0 0 50px 0;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+.background {
+    height: 200vh;
+    background-color: rgb(0, 0, 0) !important;
+}
+
+.container_top { 
+    width: 100%;;  
+    height: 500px;
+}
+
+.h1_q_u_e, .h1_por_favor {
+    font-size: 80px;
+    max-width: 60%;
+    margin-left: 12%;
+}
+
+.h1_por_favor {
+    float: right;
+    margin-right: 15%;
+}
+
+.help_color {
+    position: absolute;
+    color: rgb(187, 23, 23);
+    margin: 0px 0px 0px -2px
 }
