--- a/front-end/src/styles/navbar.module.css
+++ b/front-end/src/styles/navbar.module.css
@@ -1,5 +1,5 @@
 .background {
-    background-color: #121212;
+    background-color: rgb(0, 0, 0) !important;
     width: 100%;
     height: 100px;
     padding: 10px 35px;
@@ -13,11 +13,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 20px;
+    font-size: 22px;
 }
 
 .li {
-    font-size: 24px;
+    font-size: 26px;
 }
 
 .imagem {
@@ -29,14 +29,12 @@
 
 .texto {
     position: relative;
-    background-color: #761111;
-
 }
 
 .content_loginregister {
     display: flex;
     width: 240px;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .button {
